--- a/src/layout/css/UserHome.css
+++ b/src/layout/css/UserHome.css
@@ -32,6 +32,7 @@
     height: 6px;
     border-radius: 10px;
     background: 252525;
+    text-align: center;
 }
 
 .product-item{
@@ -46,9 +47,10 @@
 
 }
 
+
 .product-item:hover {
-    transform: scale(1.1); /* ขยายขนาดเมื่อ hover */
-    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2); /* เปลี่ยนเงาเมื่อ hover */
+    transform: scale(1.1); 
+    box-shadow: 0px 0px 20px rgba(0, 0, 0, 0.2); 
 }
 
 .poster{
@@ -57,8 +59,12 @@
     border-radius: 50px;
 }
 
-.hero{
-    height: 100vh;
-    background-color: linear-gradient(180deg, #fde1ff, #e1ffea22 60%) ;
-    display: flex;
+
+
+
+.productfi{
+    text-align: center;
+    font-size: 18px;
+    font-weight: bold;
+
 }
