--- a/src/layout/OrderDate/getProduct.css
+++ b/src/layout/OrderDate/getProduct.css
@@ -175,8 +175,8 @@
   text-transform: uppercase;
   letter-spacing: 1.3px;
   font-weight: 700;
-  color: #313133;
-  background: #4FD1C5;
+  color: #ffffff;
+  background: #c2cac9;
 background: linear-gradient(90deg, rgba(129,230,217,1) 0%, rgba(79,209,197,1) 100%);
   border: none;
   border-radius: 1000px;
